--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,107 +1,52 @@
-{% extends "layout.html" %}
 
+
+{% extends "layout.html" %}
 {% block content %}
-<form action="" method="post">
-    {{form.hidden_tag()}}
-    <div>
-        {{form.airline.label}}
-        {{form.airline}}
-        {% if form.airline.errors %}
-            {% for error in form.airline.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
+    <h2 class="text-center">Flight Price Prediction</h2>
+    <form action="" method="post" class="p-3">
+        {{ form.hidden_tag() }}
+        <div class="mb-3">
+            {{ form.airline.label(class="form-label") }}
+            {{ form.airline(class="form-control") }}
+        </div>
+        <div class="mb-3">
+            {{ form.date_of_journey.label(class="form-label") }}
+            {{ form.date_of_journey(class="form-control") }}
+        </div>
+        <div class="mb-3">
+            {{ form.source.label(class="form-label") }}
+            {{ form.source(class="form-control") }}
+        </div>
+        <div class="mb-3">
+            {{ form.destination.label(class="form-label") }}
+            {{ form.destination(class="form-control") }}
+        </div>
+        <div class="mb-3">
+            {{ form.dep_time.label(class="form-label") }}
+            {{ form.dep_time(class="form-control") }}
+        </div>
+        <div class="mb-3">
+            {{ form.arrival_time.label(class="form-label") }}
+            {{ form.arrival_time(class="form-control") }}
+        </div>
+        <div class="mb-3">
+            {{ form.duration.label(class="form-label") }}
+            {{ form.duration(class="form-control") }}
+        </div>
+        <div class="mb-3">
+            {{ form.total_stops.label(class="form-label") }}
+            {{ form.total_stops(class="form-control") }}
+        </div>
+        <div class="mb-3">
+            {{ form.additional_info.label(class="form-label") }}
+            {{ form.additional_info(class="form-control") }}
+        </div>
+        <button type="submit" class="btn btn-success">Predict</button>
+    </form>
+    {% if output %}
+        <div class="alert alert-info mt-3">{{ output }}</div>
+    {% endif %}
+    <div class="text-center mt-3">
+        <a href="{{ url_for('home') }}" class="btn btn-secondary">Back to Home</a>
     </div>
-    <br>
-    <div>
-        {{form.date_of_journey.label}}
-        {{form.date_of_journey}}
-        {% if form.date_of_journey.errors %}
-            {% for error in form.date_of_journey.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-    <div>
-        {{form.source.label}}
-        {{form.source}}
-        {% if form.source.errors %}
-            {% for error in form.source.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-    <div>
-        {{form.destination.label}}
-        {{form.destination}}
-        {% if form.destination.errors %}
-            {% for error in form.destination.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-    <div>
-        {{form.dep_time.label}}
-        {{form.dep_time}}
-        {% if form.dep_time.errors %}
-            {% for error in form.dep_time.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-    <div>
-        {{form.arrival_time.label}}
-        {{form.arrival_time}}
-        {% if form.arrival_time.errors %}
-            {% for error in form.arrival_time.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-    <div>
-        {{form.duration.label}}
-        {{form.duration}}
-        {% if form.duration.errors %}
-            {% for error in form.duration.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-    <div>
-        {{form.additional_info.label}}
-        {{form.additional_info}}
-        {% if form.additional_info.errors %}
-            {% for error in form.additional_info.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-    <div>
-        {{form.total_stops.label}}
-        {{form.total_stops}}
-        {% if form.total_stops.errors %}
-            {% for error in form.total_stops.errors %}
-                 <div>{{error}}</div>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-    <div>
-        {{form.submit()}}
-    </div>
-    <br>
-    <div>
-        {{output}}
-    </div>
-    <div>
-        <p>Redirect to homepage <a href="{{url_for('home')}}">Home</a></p>
-    </div>
-</form>
-{% endblock content %}
+{% endblock %}
